--- a/TODO
+++ b/TODO
@@ -1,7 +1,11 @@
 TODO
 ====
-1. Prvni verze.
-2.
+2. clone() method?
+3. testy.
+4. Man page.
+5.
 
 Applied
 =======
+1. Prvni verze.
+OK [20130923] skim
